# bachelor-thesis

./: .gitmodules  LICENCE  README.md  streamingatlod.config
data/glsl/: pole.frag  skirt-old.frag  skirt.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert
report/: README.md  bibliography.bib  report.tex
report/chapters/: appendix.tex  conclusion.tex  discussion.tex  introduction.tex  previous-work.tex  results.tex  streaming-atlod.tex  theoretical-background.tex
report/drawio/: aabb-tile.drawio  cache-hierarchy.drawio  crack-illustration.drawio  displacement-0.drawio  displacement-1.drawio  displacement-2.drawio  dist-tile.drawio  earth-aabb-0-wrong.drawio  earth-aabb-0.drawio  earth-aabb-1-wrong.drawio  earth-aabb-1.drawio  earth-aabb-2.drawio  eviction-quadtree.drawio  frustum-culling-illustration.drawio  horizon-culling.drawio  indices.drawio  lru-get.drawio  lru-put-evict.drawio  projected-aabb.drawio  skirt-vertex-1.drawio  skirt-vertex-2.drawio  system-architecture.drawio  threads-temp.drawio  tile-key-data.drawio  tile-key-nodetree.drawio  tile-key-quadtree.drawio  workers.drawio  ~$load-workers.drawio.dtmp  ~$lru-get.drawio.dtmp
report/settings/: settings.tex
streaming-atlod/: CMakeLists.txt
streaming-atlod/src/: aabbmesh.cpp  aabbmesh.h  application.cpp  application.h  camera.cpp  camera.h  concurrentlrucache.h  concurrentmessagequeue.cpp  concurrentmessagequeue.h  concurrentprioritizedmessagequeue.cpp  concurrentprioritizedmessagequeue.h  configmanager.cpp  configmanager.h  diskdeallocationworkerthread.cpp  diskdeallocationworkerthread.h  globalconstants.h  gridmesh.cpp  gridmesh.h  heightservice.cpp  heightservice.h  loadworkermanager.cpp  loadworkermanager.h  loadworkerthread.cpp  loadworkerthread.h  lrucache.h  main.cpp  mapprojections.h  messagequeue.cpp  messagequeue.h  overlayservice.cpp  overlayservice.h  polemesh.cpp  polemesh.h  renderstatistics.h  shader.cpp  skirtmesh.cpp  skirtmesh.h  skybox.cpp  terrainmanager.cpp  terrainmanager.h  (+9 more)
streaming-atlod/src/glsl/: aabb.frag  aabb.vert  common.glsl  pole.vert  skirt.frag  skirt.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert
streaming-atlod/src/terrain/: cesiumquantizedmesh.cpp  cesiumquantizedmesh.h  gridmesh.cpp  gridmesh.h  skirtmesh.cpp  skirtmesh.h  terraincache.cpp  terraincache.h  terrainmanager.cpp  terrainmanager.h  terraintile.cpp  terraintile.h  tileservice.cpp  tileservice.h
